--- a/02-Cooktails/src/index.css
+++ b/02-Cooktails/src/index.css
@@ -150,6 +150,15 @@ Navbar
   display: flex;
   align-items: center;
 }
+@media only screen and (max-width: 767px) {
+  .nav-center {
+    width: var(--fullWidth) + 1rem;
+    justify-content: space-between;
+  }
+  .nav-links {
+    margin-left: 10px;
+  }
+}
 .nav-links a {
   text-transform: capitalize;
   display: inline-block;
@@ -166,6 +175,11 @@ Navbar
 }
 .logo {
   width: 12rem;
+}
+@media only screen and (max-width: 767px) {
+  .nav-links a {
+    margin-right: 0;
+  }
 }
 /* 
 ====== 
@@ -223,7 +237,7 @@ Cocktails List
   display: grid;
   row-gap: 2rem;
   column-gap: 2rem;
-  /* align-items: start; */
+  align-items: start;
 }
 @media screen and (min-width: 576px) {
   .cocktails-center {
@@ -239,18 +253,19 @@ Cocktail
 .cocktail {
   background: var(--mainWhite);
   margin-bottom: 2rem;
-  box-shadow: var(--lightShadow);
+  box-shadow: 10px 10px 20px #ccc;
   transition: var(--mainTransition);
   display: grid;
   grid-template-rows: auto 1fr;
   border-radius: var(--mainBorderRadius);
 }
 .cocktail:hover {
-  box-shadow: var(--darkShadow);
+  box-shadow: 20px 20px 10px #ccc;
 }
 .cocktail img {
   height: 20rem;
   object-fit: cover;
+  background-size: cover;
   border-top-left-radius: var(--mainBorderRadius);
   border-top-right-radius: var(--mainBorderRadius);
 }
@@ -288,22 +303,38 @@ Form
   text-transform: capitalize;
   border-radius: var(--mainBorderRadius);
 }
+.form-control {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .form-control label {
   display: block;
-  margin-bottom: 1.25rem;
   font-weight: bold;
   letter-spacing: 0.25rem;
   color: var(--primaryColor);
 }
 .form-control input {
-  width: 100%;
+  width: 80%;
   border: none;
   border-color: transparent;
   background: var(--mainBackground);
   border-radius: var(--mainBorderRadius);
   padding: 0.5rem;
   font-size: 1.2rem;
+}
+@media only screen and (max-width: 767px) {
+  .search-form {
+    width: auto;
+  }
+  .form-control {
+    flex-direction: column;
+  }
+  .form-control input {
+    width: 95%;
+    margin-bottom: 1rem;
+  }
 }
 /* 
 ====== 
@@ -314,11 +345,28 @@ Cocktail
 .cocktail-section {
   text-align: center;
 }
+.single-cocktail {
+  padding: 5rem 3rem;
+}
+@media only screen and (max-width: 767px) {
+  .single-cocktail {
+    padding: 2rem 0rem;
+  }
+}
+.single-cocktail header {
+  text-align: center;
+  margin-bottom: 4rem;
+}
 .drink {
   width: var(--smallWidth);
   max-width: var(--fullWidth);
   margin: 0 auto;
   text-align: left;
+}
+@media only screen and (max-width: 767px) {
+  .dirnk {
+    width: 95vw;
+  }
 }
 .drink img {
   border-radius: var(--mainBorderRadius);
